# infparquet

./: CMakeLists.txt  README.md  SUMMARY.md  build.bat  build.sh
include/compression/: lzma_compressor.h  lzma_decompressor.h  parallel_processor.h
include/core/: arrow_adapter.h  parquet_reader.h  parquet_structure.h  parquet_writer.h
include/framework/: command_parser.h  infparquet_framework.h
include/metadata/: custom_metadata.h  json_helper.h  json_serialization.h  metadata_generator.h  metadata_parser.h  metadata_types.h  sql_query_parser.h
src/: main.cpp
src/compression/: lzma_compressor.c  lzma_decompressor.c  parallel_processor.cpp
src/core/: arrow_adapter.cpp  parquet_reader.c  parquet_structure.c  parquet_writer.c
src/framework/: command_parser.cpp  infparquet_framework.cpp
src/metadata/: custom_metadata.c  json_helper.cpp  json_serialization.c  json_utils.c  metadata_generator.c  metadata_parser.cpp  sql_query_parser.cpp
test/generator/: parquet_simulator.py
